--- a/level-1/abstract/style.css
+++ b/level-1/abstract/style.css
@@ -18,6 +18,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
+  font-family: var(--ff-primary);
 }
 
 .filter--white{
@@ -29,7 +30,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   background-color: var(--clr-primary-dark);
   display: flex;
   flex-wrap: wrap;
-  padding: 1em 0.5em;
+  padding: 1.5em 0.5em;
   align-items: center;
 }
 
@@ -40,11 +41,6 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   font-size: 1.5rem;
   font-family: var(--ff-primary);
   margin: 0 0.1em;
-}
-
-.header__logo{
-  width: 2rem;
-  height: 2rem;
 }
 
 .header__link{
@@ -69,6 +65,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   gap: 0.5em;
 }
 
+.header__logo, 
 .header__hamburger img{
   height: 2rem;
   width: 2rem;
@@ -77,6 +74,38 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 .header__search img{
   height: 1.5rem;
   width: 1.5rem;
+}
+
+/* SEARCH SECTION */
+.search-section{
+  background-color: var(--clr-neutral);
+  padding: 4em 0;
+}
+
+.search-section__header{
+  font-size: 2.5rem;
+  text-align: center;
+  letter-spacing: -3px;
+}
+
+.search-section__search-bar{
+  width: 90%;
+  display: block;
+  margin: 2em auto;
+  height: 4rem;
+  max-width: 32rem;
+  color: var(--clr-primary-dark);
+  border: 2px solid var(--clr-primary-dark);
+  padding-left:1em;
+  font-size: 1.2rem;
+  background: url("./images/bx-right-arrow.svg") no-repeat right;
+  box-shadow: inset 0 0 0 1000px rgba(255, 254, 254, 0.6);
+  background-size: 3rem;
+  font-family: var(--ff-primary);
+}
+
+.search-section__search-bar:hover{
+  border: 2px solid var(--clr-accent);
 }
 
 .hidden{
