Fix color issues with header

--- a/level-1/abstract/style.css
+++ b/level-1/abstract/style.css
@@ -395,6 +395,12 @@ footer a:hover{
   .header__submit-request:hover{
     cursor: pointer;
   }
+
+  .header__submit-request,
+  .header__sign-in{
+    height: fit-content;
+    width: fit-content;
+  }
 }
 
 /* IMPORTANT PROPERTIES */
